--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -27,6 +27,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.google.android.support:wearable:2.8.1'
     implementation 'com.google.android.gms:play-services-wearable:17.1.0'
     implementation 'androidx.percentlayout:percentlayout:1.0.0'
