--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@android:style/Theme.DeviceDefault">
+        android:theme="@style/AppTheme">
         <uses-library
             android:name="com.google.android.wearable"
             android:required="true" />
@@ -34,9 +34,19 @@
             android:value="true" />
 
         <activity
-            android:name=".activities.ConfigActivity"
-            android:label="@string/title_activity_config">
+            android:name=".MainActivity"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
+        <activity
+            android:name=".activities.ConfigActivity"
+            android:label="@string/title_activity_config"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         </activity>
 
         <service
@@ -47,20 +57,8 @@
             android:name="com.commons.services.CsvSensorsSaverService"
             android:enabled="true"
             android:exported="true" />
-        <service
-            android:name=".services.DataSenderService"
-            android:enabled="true"
-            android:exported="true" />
 
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
     </application>
 
 </manifest>
